# nirvanamm

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/: FUNDING.yml
libs/: build.bat  build.sh  xdelta3.def
libs/xdelta-bridge/: Makefile  bridge.c
src/: build.rs  main.rs  main_window.rs  utils.rs
src/main_window/: asref_winctrl.rs  config.rs  mod_data.rs  mod_validation.rs
src/utils/: build.rs  files.rs  stream.rs  xdelta3.rs
