[package]
name = "nirvanamm"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
base64 = "0.22.1"
directories = "5.0.1"
libc = "0.2.169"
libloading = "0.8.6"
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_with = "3.12.0"
toml = "0.8.19"
walkdir = "2.5.0"
winsafe = { version = "0.0.22", features = ["gui"] }
zip = "2.2.2"

[build-dependencies]
winresource = "0.1.19"
